<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="8dp">

    <ImageView
        android:id="@+id/product_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerInside"
        android:background="@drawable/image_bg"

        android:src="@drawable/example_thumb"
        android:clipToOutline="true"

        android:layout_margin="4dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/product_without_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_thumbnail" />

    <TextView
        android:id="@+id/product_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/price"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/product_thumbnail"
        app:layout_constraintStart_toEndOf="@id/product_without_discount"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginVertical="4dp"
        android:textStyle="bold"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@id/product_discount"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_short"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="14sp"

        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"

        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@id/product_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>