<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_image_color"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/10"
            android:background="@drawable/image_counter_bg"
            android:textColor="@color/black"
            android:paddingHorizontal="12dp"
            android:paddingVertical="2dp"
            android:layout_marginTop="-48dp"
            android:layout_marginHorizontal="@dimen/margin_price_in_product_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/margin_price_in_product_fragment"
            android:textStyle="bold"
            android:textSize="18sp"

            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_without_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/price"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/product_price"
            app:layout_constraintTop_toTopOf="@+id/product_price" />

        <TextView
            android:id="@+id/product_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/price"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/product_without_discount"
            app:layout_constraintTop_toTopOf="@+id/product_price" />

        <TextView
            android:id="@+id/product_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_price_in_product_fragment"
            android:text="@string/price"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_price" />

        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_short"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="@dimen/margin_text_in_product_fragment"
            app:layout_constraintTop_toBottomOf="@id/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_short"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/margin_text_in_product_fragment"
            app:layout_constraintTop_toBottomOf="@id/product_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/margin_text_in_product_fragment"
            app:layout_constraintTop_toBottomOf="@id/product_brand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>